implementing swagger and clean architecture
