# app/Models/Todolist.php
@@ -19,6 +19,90 @@ class Todolist extends Model
 {
     use HasFactory;
 
+     /**
+     * @OA\Property(
+     *     title="ID",
+     *     description="ID",
+     *     format="int64",
+     *     example=1
+     * )
+     *
+     * @var integer
+     */
+    private $id;
+
+    /**
+     * @OA\Property(
+     *      title="Title",
+     *      description="Name of the new project",
+     *      example="A nice project"
+     * )
+     *
+     * @var string
+     */
+    public $title;
+
+    /**
+     * @OA\Property(
+     *      title="Description",
+     *      description="Description of the new project",
+     *      example="This is new project's description"
+     * )
+     *
+     * @var string
+     */
+    public $description;
+
+    /**
+     * @OA\Property(
+     *     title="Created at",
+     *     description="Created at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $created_at;
+
+    /**
+     * @OA\Property(
+     *     title="Updated at",
+     *     description="Updated at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $updated_at;
+
+
+    /**
+     * @OA\Property(
+     *      title="User ID",
+     *      description="Author's id of the new project",
+     *      format="int64",
+     *      example=1
+     * )
+     *
+     * @var integer
+     */
+    public $user_id;
+
+
+    /**
+     * @OA\Property(
+     *     title="User",
+     *     description="Project author's user model"
+     * )
+     *
+     * @var \App\Virtual\Models\User
+     */
+    private $user;
+
     protected $fillable = ['title', 'description','user_id'];
 
     public function getUser()
