# storage/api-docs/api-docs.json
@@ -24,24 +24,26 @@
                                 }
                             }
                         }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
                     }
                 }
-            }
-        },
-        "/api/todolists/create": {
+            },
             "post": {
                 "tags": [
                     "Todolist"
                 ],
-                "summary": "Store new todolist",
-                "description": "Returns todolist data",
-                "operationId": "todolists/create",
+                "summary": "Store new project",
+                "description": "Returns project data",
+                "operationId": "storeProject",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StoreTodolist"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "201": {
                         "description": "Successful operation",
@@ -85,7 +87,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
@@ -94,15 +96,6 @@
                                 }
                             }
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
                     }
                 }
             }
@@ -112,9 +105,9 @@
                 "tags": [
                     "Todolist"
                 ],
-                "summary": "Update existing todlist",
-                "description": "Returns updated todolist data",
-                "operationId": "updateTodolist",
+                "summary": "Update existing project",
+                "description": "Returns updated project data",
+                "operationId": "updateProject",
                 "parameters": [
                     {
                         "name": "id",
@@ -126,6 +119,16 @@
                         }
                     }
                 ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateTodolist"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "202": {
                         "description": "Successful operation",
@@ -170,22 +173,15 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "201": {
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "schema": {
+                                    "$ref": "#/components/schemas/Todolist"
+                                }
                             }
                         }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
                     }
                 }
             }
@@ -193,6 +189,43 @@
     },
     "components": {
         "schemas": {
+            "StoreTodolist": {
+                "title": "Store Todolist request",
+                "description": "Store Todolist request body data",
+                "required": [
+                    "name"
+                ],
+                "properties": {
+                    "title": {
+                        "title": "title",
+                        "description": "Name of the new project",
+                        "type": "string",
+                        "example": "A nice project"
+                    },
+                    "description": {
+                        "title": "description",
+                        "description": "Description of the new project",
+                        "type": "string",
+                        "example": "This is new project's description"
+                    },
+                    "user_id": {
+                        "title": "user_id",
+                        "description": "Author's id of the new project",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    }
+                },
+                "type": "Todolist"
+            },
+            "UpdateTodolist": {
+                "title": "Store Todolist request",
+                "description": "Store Todolist request body data",
+                "required": [
+                    "name"
+                ],
+                "type": "Todolist"
+            },
             "TodolistResource": {
                 "title": "TodolistResource",
                 "description": "Todolist resource",
@@ -225,6 +258,37 @@
                         "description": "Name of the new project",
                         "type": "string",
                         "example": "A nice project"
+                    },
+                    "description": {
+                        "title": "Description",
+                        "description": "Description of the new project",
+                        "type": "string",
+                        "example": "This is new project's description"
+                    },
+                    "created_at": {
+                        "title": "Created at",
+                        "description": "Created at",
+                        "type": "string",
+                        "format": "datetime",
+                        "example": "2020-01-27 17:50:45"
+                    },
+                    "updated_at": {
+                        "title": "Updated at",
+                        "description": "Updated at",
+                        "type": "string",
+                        "format": "datetime",
+                        "example": "2020-01-27 17:50:45"
+                    },
+                    "user_id": {
+                        "title": "User ID",
+                        "description": "Author's id of the new project",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "user": {
+                        "title": "User",
+                        "description": "Project author's user model"
                     }
                 },
                 "type": "object",
